# dashboard

./: .dockerignore  .env  .gitignore  Dockerfile  config.py  docker-compose.yml  get_project.py  main.py  middleware.py  package-lock.json  pyproject.toml
auth/: router.py  servise.py
database/: db.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Codex.css  LaserFlowBoxExample.jsx  NeonButton.jsx
frontend/src/pages/: Codex.jsx  Login.jsx  Users.css  Users.jsx  VpnDashboard.jsx
frontend/static/css/auth/: auth.css  electricborder.css  laserflow.css  neonbutton.css
frontend/static/css/vpn/: vpn.css
frontend/static/js/auth/: electricborder.js  laserflow.js  shader.js
frontend/templates/: auth.html  vpn.html
vpn/: db_services.py  models.py  routers.py  send_message.py
